# sourcetrail-cls

./: .clang-format  .cmake-format.json  .gitignore  .style.yapf  CMakeLists.txt  CMakeSettings.json  README.md  appveyor.yml  environment.yml  requirements.txt
data/: cls.json
docs/: Installation.md
scripts/: bootstrap.py  build.py
scripts/detail/: ci_cd.py  code_format.py  test_installation.py  utils.py
scripts/linux/: bootstrap.sh  build.sh  ci_cd.sh  code_format.sh  env.sh  quality.sh  run.sh
src/: CMakeLists.txt
src/cls2srctrl/: CMakeLists.txt  app_entry.cpp  app_entry.hpp  cls2srctrl.cpp  cls2srctrl.hpp  config.cpp  config.hpp  main.cpp  types.cpp  types.hpp
src/common/: CMakeLists.txt  pch.cpp  pch.hpp
src/experiments/: CMakeLists.txt
src/experiments/hello-cpp/: CMakeLists.txt  main.cpp
src/experiments/hello-sourcetraildb/: CMakeLists.txt  main.cpp
